# wallet-adapter

./: CONTRIBUTING.md  Cargo.toml  README.md
examples/all-wallets-base-ui/: Cargo.toml  index.html
examples/all-wallets-base-ui/src/: main.rs
examples/all-wallets-base-ui/test_data/: anchor_playground.json
examples/all-wallets-bevy/: Cargo.toml
examples/all-wallets-bevy/src/: main.rs
examples/all-wallets-leptos/: Cargo.toml
examples/all-wallets-leptos/src/: main.rs
wallet-adapter-base/: Cargo.toml
wallet-adapter-base/src/: adapter.rs  error.rs  lib.rs  signer.rs  transaction.rs
wallet-adapter-bevy/: Cargo.toml
wallet-adapter-bevy/src/: lib.rs
wallet-adapter-common/: Cargo.toml
wallet-adapter-common/src/: connection.rs  lib.rs  storage.rs  types.rs
wallet-adapter-connection/wallet-adapter-connection-common/: Cargo.toml
wallet-adapter-connections/wallet-adapter-connection-common/src/: lib.rs
wallet-adapter-connections/wallet-adapter-connection-reqwest/: Cargo.toml
wallet-adapter-connections/wallet-adapter-connection-wasm/: Cargo.toml
wallet-adapter-connections/wallet-adapter-connection-wasm/src/: lib.rs
wallet-adapter-types/: Cargo.toml
wallet-adapter-wasm/: Cargo.toml
wallet-adapter-wasm/src/: connection.rs  generic_wallet.rs  lib.rs  storage.rs  util.rs
wallet-adapter-web3/: Cargo.toml
wallet-adapter-web3/src/: lib.rs
wallet-adapter-x86/: Cargo.toml
wallet-adapter-x86/src/: connection.rs  storage.rs
wallets/wallet-adapter-backpack/: Cargo.toml
wallets/wallet-adapter-backpack/src/: lib.rs
wallets/wallet-adapter-phantom/: Cargo.toml
wallets/wallet-adapter-phantom/src/: lib.rs
wallets/wallet-adapter-solflare/: Cargo.toml
wallets/wallet-adapter-solflare/src/: lib.rs
wallets/wallet-adapter-unsafe-burner/: Cargo.toml
wallets/wallet-adapter-unsafe-burner/src/: lib.rs
wallets/wallet-adapter-unsafe-persistent/: Cargo.toml
wallets/wallet-adapter-unsafe-persistent/src/: lib.rs
