[workspace]
resolver = "2"
members = [
    "examples/all-wallets-base-ui",
    "wallet-adapter-base",
    "wallet-adapter-web3",
    "wallets/wallet-adapter-*",
]

[workspace.package]
version = "0.1.0"
edition = "2021"


[workspace.dependencies]
# workspace
wallet-adapter-base = { path = "./wallet-adapter-base" }
wallet-adapter-web3 = { path = "./wallet-adapter-web3" }

## wallets
wallet-adapter-phantom = { path = "./wallets/wallet-adapter-phantom" }

# crates.io
anyhow = "1"
anchor-lang-idl = "0.1.1"
async-trait = "0.1"
bincode = "1.3.3"
gloo-net = "0.6"
hex = "0.4"
js-sys = "0.3.65"
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde-wasm-bindgen = "0.6"
solana-sdk = "2"
strum = { version = "0.26", features = ["derive"] }
thiserror = "1"
tokio = "1.40"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = "0.3"
