[workspace]
resolver = "2"
members = [
    "examples/all-wallets-base-ui",
    "examples/all-wallets-bevy",
    "wallet-adapter-base",
    "wallet-adapter-connection/wallet-adapter-connection-common",
    "wallet-adapter-connection/wallet-adapter-connection-reqwest",
    "wallet-adapter-connection/wallet-adapter-connection-wasm",
    "wallet-adapter-types",
    "wallets/wallet-adapter-*",
]

[workspace.package]
version = "0.1.0"
edition = "2021"


[workspace.dependencies]
# workspace
wallet-adapter-base = { path = "./wallet-adapter-base" }
wallet-adapter-types = { path = "./wallet-adapter-types" }
wallet-adapter-connection-common = { path = "./wallet-adapter-connection/wallet-adapter-connection-common" }
wallet-adapter-connection-wasm = { path = "./wallet-adapter-connection/wallet-adapter-connection-wasm" }

## wallets
wallet-adapter-phantom = { path = "./wallets/wallet-adapter-phantom" }
wallet-adapter-unsafe-burner = { path = "./wallets/wallet-adapter-unsafe-burner" }
wallet-adapter-unsafe-persistent = { path = "./wallets/wallet-adapter-unsafe-persistent" }

# crates.io
anyhow = "1"
anchor-lang-idl = "0.1.1"
async-trait = "0.1"
base64 = "0.22"
bevy = "0.14"
bincode = "1.3.3"
dyn-clone = "1"
gloo-net = "0.6"
hex = "0.4"
js-sys = "0.3.65"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde-wasm-bindgen = "0.6"
solana-sdk = "2"
strum = { version = "0.26", features = ["derive"] }
thiserror = "1"
tokio = "1.40"
tracing = "0.1.40"
tracing-wasm = "0.2"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = "0.3"
