[workspace]
resolver = "2"
members = [
    "examples/all-wallets-base-ui",
    "examples/all-wallets-bevy",
    "examples/all-wallets-leptos",
    "wallet-adapter-base",
    "wallet-adapter-bevy",
    "wallet-adapter-common",
    "wallet-adapter-wasm",
    "wallet-adapter-x86",
    "wallets/wallet-adapter-*",
]

[workspace.package]
version = "0.1.0"
edition = "2021"


[workspace.dependencies]
# workspace
wallet-adapter-base = { path = "./wallet-adapter-base" }
wallet-adapter-bevy = { path = "./wallet-adapter-bevy" }
wallet-adapter-common = { path = "./wallet-adapter-common" }
wallet-adapter-wasm = { path = "./wallet-adapter-wasm" }
wallet-adapter-x86 = { path = "./wallet-adapter-x86" }

## wallets
wallet-adapter-phantom = { path = "./wallets/wallet-adapter-phantom" }
wallet-adapter-solflare = { path = "./wallets/wallet-adapter-solflare" }
wallet-adapter-backpack = { path = "./wallets/wallet-adapter-backpack" }
wallet-adapter-unsafe-burner = { path = "./wallets/wallet-adapter-unsafe-burner" }
wallet-adapter-unsafe-persistent = { path = "./wallets/wallet-adapter-unsafe-persistent" }

# crates.io
anyhow = "1"
arboard = "3.4"
anchor-lang-idl = "0.1.1"
async-trait = "0.1"
base64 = "0.22"
bevy = "0.14"
bincode = "1.3.3"
dyn-clone = "1"
futures = "0.3"
gloo-net = "0.6"
hex = "0.4"
js-sys = "0.3.65"
leptos = "0.6"
platform-dirs = "0.3.0"
reqwest = "0.12"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde-wasm-bindgen = "0.6"
solana-sdk = "2"
strum = { version = "0.26", features = ["derive"] }
thiserror = "1"
tokio = "1.40"
tracing = "0.1.40"
tracing-subscriber = "0.3"
tracing-wasm = "0.2"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = "0.3"
