[package]
name = "wallet-adapter-web3"
version.workspace = true
edition.workspace = true

[dependencies]

# crates.io
anyhow.workspace = true
async-trait.workspace = true
bincode.workspace = true
serde.workspace = true
solana-sdk.workspace = true


[dev-dependencies]
anchor-lang-idl = { workspace = true, features = ["convert"] }
hex.workspace = true
serde_json.workspace = true
