[package]
name = "all-wallets-base-ui"
version.workspace = true
edition.workspace = true

[dependencies]
# workspace
wallet-adapter-base.workspace = true
wallet-adapter-web3.workspace = true
wallet-adapter-phantom.workspace = true
wallet-adapter-unsafe-burner.workspace = true

# crates.io
anyhow = { version = "1", workspace = true }
anchor-lang-idl = { workspace = true, features = ["convert"] }
async-trait.workspace = true
hex.workspace = true
gloo-net = { workspace = true, features = ["http"] }
solana-sdk.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
wasm-bindgen.workspace = true
wasm-bindgen-futures.workspace = true
web-sys = { workspace = true, features = [
    "Window",
    "Location",
    "console",
    "Document",
    "Element",
    "HtmlElement",
] }
