[package]
name = "all-wallets-base-ui"
version.workspace = true
edition.workspace = true

[dependencies]
# workspace
wallet-adapter-base.workspace = true
wallet-adapter-types.workspace = true
wallet-adapter-connection-common.workspace = true
wallet-adapter-connection-wasm.workspace = true
wallet-adapter-phantom.workspace = true
wallet-adapter-unsafe-burner.workspace = true
wallet-adapter-unsafe-persistent = { workspace = true, features = ["wasm"] }

# crates.io
anyhow = { version = "1", workspace = true }
anchor-lang-idl = { workspace = true, features = ["convert"] }
async-trait.workspace = true
hex.workspace = true
solana-sdk.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
tokio = { workspace = true, features = ["sync"] }
wasm-bindgen.workspace = true
wasm-bindgen-futures.workspace = true
web-sys = { workspace = true, features = [
    "Window",
    "Location",
    "console",
    "Document",
    "Element",
    "HtmlElement",
    "HtmlSelectElement",
] }
tracing-wasm.workspace = true
