[package]
name = "all-wallets-bevy"
version.workspace = true
edition.workspace = true

[dependencies]
# workspace
wallet-adapter-base.workspace = true
wallet-adapter-unsafe-burner.workspace = true

# crates.io
anyhow.workspace = true
bevy = { workspace = true, features = ["dynamic_linking", "wayland"] }
futures.workspace = true


[target.'cfg(target_arch = "x86_64")'.dependencies]
arboard.workspace = true
