[package]
name = "all-wallets-bevy"
version.workspace = true
edition.workspace = true

[dependencies]
# workspace
wallet-adapter-bevy.workspace = true
wallet-adapter-unsafe-burner.workspace = true
wallet-adapter-unsafe-persistent.workspace = true
wallet-adapter-x86.workspace = true

# crates.io
bevy = { workspace = true, features = ["dynamic_linking", "wayland"] }
