[package]
name = "wallet-adapter-connection-common"
version.workspace = true
edition.workspace = true

[dependencies]
# workspace
wallet-adapter-types.workspace = true

# crates.io
anyhow.workspace = true
async-trait.workspace = true
serde = { workspace = true, features = ["derive"] }
solana-sdk.workspace = true
