[package]
name = "wallet-adapter-connection-wasm"
version.workspace = true
edition.workspace = true

[dependencies]
# workspace
wallet-adapter-types.workspace = true
wallet-adapter-connection-common.workspace = true

# crates.io
anyhow.workspace = true
async-trait.workspace = true
base64.workspace = true
gloo-net = { workspace = true, features = ["http"] }
solana-sdk.workspace = true
serde_json.workspace = true
tracing.workspace = true
