[package]
name = "wallet-adapter-backpack"
version.workspace = true
edition.workspace = true

[dependencies]
# workspace
wallet-adapter-base.workspace = true
wallet-adapter-common.workspace = true
wallet-adapter-wasm.workspace = true

# crates.io
anyhow.workspace = true
async-trait.workspace = true
bincode.workspace = true
js-sys.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
serde-wasm-bindgen.workspace = true
solana-sdk.workspace = true
tracing.workspace = true
tokio = { workspace = true, features = ["sync"] }
wasm-bindgen.workspace = true
wasm-bindgen-futures.workspace = true
web-sys = { workspace = true, features = ["Window", "Location", "console"] }
