[package]
name = "wallet-adapter-unsafe-persistent"
version.workspace = true
edition.workspace = true

[dependencies]
# workspace
wallet-adapter-common.workspace = true
wallet-adapter-base.workspace = true
# crates.io
anyhow.workspace = true
async-trait.workspace = true
hex.workspace = true
solana-sdk.workspace = true
web-sys = { workspace = true, features = ["Storage"], optional = true }

[features]
file-system = []
wasm = ["web-sys"]
